# chordbot

./: .env.example  .gitignore  Agent.md  CHANGES.md  CLAUDE.md  README.md  config.yaml.example  memory.md  package-lock.json  package.json  pyproject.toml
.claude/skills/debug-chordcode/: SKILL.md
.claude/skills/playwright-skill/: .temp-execution-1770708869308.js
docs/: agent-core-roadmap.md  cli.md  cronjobs.md  langfuse.md  memory.md  project.md  subagents.md
refs/lightrag/: api.json
refs/paddleocr/: async_api_example.py  sync_api_example.py
src/chord_code.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/chordcode/: __main__.py  config.py  config_schema.py  hookdefs.py  hooks.py  log.py  model.py
src/chordcode/agents/: __init__.py  registry.py  service.py  types.py
src/chordcode/api/: app.py
src/chordcode/bus/: __init__.py  bus.py
tests/: test_channel_sessions_store.py  test_cron_service.py  test_daytona_tools.py  test_feishu_channel.py  test_history.py  test_hooks.py  test_log_view_api.py  test_logging.py  test_mcp_config.py  test_memory_hooks.py  test_memory_manager.py  test_memory_tools.py  test_permission_service.py  test_prompt_template.py  test_reasoning_content.py  test_session_management_api.py  test_skill_tool.py  test_skills_loader.py  test_store_runtime_migration.py  test_subagent_tasking.py  test_tool_permissions.py  test_web_tools.py
web/: app.js  index.html  styles.css
web/js/: state.js
web/styles/: base.css  chat.css  components.css  layout.css  observability.css  sidebar.css
(+92 files in other folders)
