[project]
name = "chord-code"
version = "0.1.0"
description = "Python agent core inspired by Open Code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.6",
  "aiosqlite>=0.20",
  "openai>=1.40",
  "loguru>=0.7",
  "tree-sitter>=0.21",
  "tree-sitter-bash>=0.21",
  "pyyaml>=6.0",
  "langfuse>=3.0",
  "lark-oapi>=1.5.0,<2.0.0",
  "httpx>=0.27",
  "mcp>=1.0",
  "typer>=0.12",
  "rich>=13.0",
  "croniter>=2.0",
  "daytona>=0.148.0,<1",
]

[project.scripts]
chordcode = "chordcode.cli.app:app"

[tool.uv]
package = true

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
]

[tool.setuptools.package-data]
chordcode = [
    "web/**/*",
    "web/*",
    "prompts/*.txt",
    "prompts/agents/*.txt",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
